# new-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: lint.yml  tests.yml
tests/: test_something.py
